--- a/Front-end code/index.html
+++ b/Front-end code/index.html
@@ -10,11 +10,12 @@
   <meta name="keywords" content="hostel, hostel in vilnius, vilnius hostel, vilnius accommodation, hostelgate, hostelgate bnb " />
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="CSS/index.css">
   <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css"> 
+  <!--<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css"> 
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="CSS/index.css">
   
 </head>
 
@@ -30,11 +31,11 @@
 		    </button>
 			<a class="navbar-brand" href="#mainPage"><span class="glyphicon glyphicon-home"></span></a>
 		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="hostelgate.html">Hostelgate</a></li>
-				<li><a href="hostelgate_bnb.html">Hostelgate BnB</a></li>
-				<li><a href="#contactSection">Contact</a></li> 			
+		<div class="collapse navbar-collapse" id="myNavbar" >
+			<ul class="nav navbar-nav navbar-right" >
+				<li><a href="hostelgate.html" ><span class="nav-capitalize">H</span>OSTELGATE</a></li>
+				<li><a href="hostelgate_bnb.html"><span class="nav-capitalize">H</span>OSTELGATE <span class="nav-capitalize">B</span>n<span class="nav-capitalize">B</span></a></li>
+				<li><a href="#contactSection"><span class="nav-capitalize">C</span>ONTACT</a></li> 			
 			</ul>
 		</div>	
 	</div>	
@@ -57,6 +58,7 @@
                             </li>                    
                         </ul>												
                     </div>
+					<a href="#aboutSection"><img src="images/misc/arrow.png" width="100" height="100" class="upAndDown"></img></a>
                 </div>
             </div>
 
@@ -105,48 +107,48 @@
 	laundry services and even free parking!!!	
 	</p><br>
 	<div class="container">
-		<div class="row slideOutAnim">	
+		<div class="row">	
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">
-					<img id="thumb1" src="images/rooms/hostelgate/6bed_47.jpg" class="img-responsive facilitiesImg" alt="g1" width="400" height="300">				
+					<img id="thumb1" src="images/rooms/hostelgate/6bed_47.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g1" width="400" height="300">				
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb2" src="images/rooms/hostelgate/common_21.jpg" class="img-responsive facilitiesImg" alt="g2" width="400" height="300">				
+					<img id="thumb2" src="images/rooms/hostelgate/common_21.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g2" width="400" height="300">			
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">		
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb3" src="images/rooms/hostelgate/kitchen_13.jpg" class="img-responsive facilitiesImg" alt="g3" width="400" height="300">				
+					<img id="thumb3" src="images/rooms/hostelgate/kitchen_13.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g3" width="400" height="300">		
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb4" src="images/rooms/hostelgate/sauna_95.jpg" class="img-responsive facilitiesImg" alt="g4" width="400" height="300">				
+					<img id="thumb4" src="images/rooms/hostelgate/sauna_95.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g4" width="400" height="300">				
 				</div>
 			</div>
 		</div>
 		<hr> 
-		<div class="row slideOutAnim">
+		<div class="row">
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb5" src="images/rooms/bnb/db_48.jpg" class="img-responsive facilitiesImg" alt="g5" width="400" height="300">				
+					<img id="thumb5" src="images/rooms/bnb/db_48.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g5" width="400" height="300">				
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb6" src="images/rooms/bnb/db_balcony.jpg" class="img-responsive facilitiesImg" alt="g6" width="400" height="300">				
+					<img id="thumb6" src="images/rooms/bnb/db_balcony.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g6" width="400" height="300">				
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb7" src="images/rooms/bnb/4bed_62.jpg" class="img-responsive facilitiesImg" alt="g7" width="400" height="300">				
+					<img id="thumb7" src="images/rooms/bnb/4bed_62.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g7" width="400" height="300">				
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">	
 				<div data-toggle="modal" data-target="#facilitiesModal">		
-					<img id="thumb8" src="images/rooms/bnb/twin_67.jpg" class="img-responsive facilitiesImg" alt="g8" width="400" height="300">				
+					<img id="thumb8" src="images/rooms/bnb/twin_67.jpg" class="img-responsive facilitiesImg slideOutAnim" alt="g8" width="400" height="300">				
 				</div>
 			</div>
 		</div>
@@ -360,7 +362,6 @@
 </footer>
 
 <script src="http://maps.googleapis.com/maps/api/js"></script>
-
 <script src="JS/index.js"></script>
 
 </body>
